deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: xyz-application-deployment
  labels:
    app: xyz-service
spec:
  replicas: 5
  selector:
    matchLabels:
      app: xyz-service
  template:
    metadata:
      labels:
        app: xyz-service
      annotations:
        prometheus.io/scrape: "true"
        prometheus.io/path: "/metrics"
        prometheus.io/port: "8081"
    spec:
      containers:
        - name: xyz-application-service-container
          image: kkpdealwis93/xyz-repo-application:<ACTUAL_BUILD_NUMBER>
          ports:
            - containerPort: 8080
        - name: cadvisor
          image: gcr.io/cadvisor/cadvisor:latest
          ports:
            - containerPort: 8081
          args:
            - "--port=8081" # Set cAdvisor to listen on port 8081
            - "--containerd=/run/containerd/containerd.sock" # Path to containerd runtime
            - "--docker_only=false"
            - "--enable_metrics=cpu,memory" # Collect only CPU and memory metrics
            - "--whitelisted_containers=xyz-application-service-container" # Monitor only the application container
          volumeMounts:
            - name: containerd
              mountPath: /run/containerd/containerd.sock
              readOnly: true
      volumes:
        - name: containerd
          hostPath:
            path: /run/containerd/containerd.sock
            type: Socket
