prometheus-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: prometheus
  namespace: monitoring
  annotations:
      prometheus.io/scrape: 'true'
      prometheus.io/port:   '9090'
spec:
  selector:
    app: prometheus-server
  type: ClusterIP
  ports:
    - name: http-prometheus
      protocol: TCP
      port: 80
      targetPort: 9090
