service.yaml
apiVersion: v1
kind: Service
metadata:
  name: xyz-service
  labels:
    app: xyz-service
spec:
  type: LoadBalancer
  ports:
  - port: 8080
    targetPort: 8080
    nodePort: 30000
    protocol: TCP
  selector:
    app: xyz-service
